<resources>
    <string name="app_version" translatable="false">ver. %s</string>
    <string name="one" translatable="false">1</string>
    <string name="two" translatable="false">2</string>
    <string name="three" translatable="false">3</string>
    <string name="four" translatable="false">4</string>
    <string name="five" translatable="false">5</string>
    <string name="six" translatable="false">6</string>
    <string name="seven" translatable="false">7</string>
    <string name="eight" translatable="false">8</string>
    <string name="nine" translatable="false">9</string>
    <string name="zero" translatable="false">0</string>
    <string name="drawer_open" translatable="false">drawer_open</string>
    <string name="drawer_close" translatable="false">drawer_close</string>
    <string name="button_close">Close</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_help">Help</string>
    <string name="button_accept">Accept</string>
    <string name="button_back">Back</string>
    <string name="button_confirm">Confirm</string>
    <string name="button_return">Return</string>
    <string name="phone_prefix">48</string>
    <string name="phone_mask">+48 ___ ___ ___</string>
    <string name="phone_empty">+48 </string>
    <string name="phone_prefix_staging" translatable="false">333</string>
    <string name="phone_mask_staging" translatable="false">+359 ___ ___ ___</string>
    <string name="phone_empty_staging" translatable="false">+359 </string>
    <string name="confirm_exit_from_app">Quit the application?</string>
    <string name="font_light" translatable="false">sans-serif-light</string>
    <string name="font_medium" translatable="false">sans-serif-medium</string>
    <string name="font_regular" translatable="false">sans-serif</string>
    <string name="font_condensed" translatable="false">sans-serif-condensed</string>
    <string name="font_black" translatable="false">sans-serif-black</string>
    <string name="font_thin" translatable="false">sans-serif-thin</string>
    <string name="select_locale" translatable="false">Select the app language </string>
    <string name="select_locate_ru" translatable="false">Русский</string>
    <string name="select_locate_pl" translatable="false">Polski</string>
    <string name="select_locate_ro" translatable="false">Română</string>
    <string name="select_locate_bg" translatable="false">Български</string>
    <string name="sign_in_title">Log in</string>
    <string name="sign_in_info">Using email or phone and personal PIN-code</string>
    <string name="sign_in_login">E-mail or phone number (e.g. 666 777 888)</string>
    <string name="sign_in_pin">Personal PIN</string>
    <string name="sign_in_forgot_pin">Forgot your PIN?</string>
    <string name="sign_in_button">Log in</string>
    <string name="sign_in_login_mock">48799000111</string>
    <string name="sign_in_pin_mock">1111</string>
    <string name="forgot_title">Forgot your PIN?</string>
    <string name="forgot_hint">Enter your email or phone</string>
    <string name="forgot_info">Enter mobile phone or email, we’ll send confirmation code and you can set up a new PIN.</string>
    <string name="forgot_button">SEND CONFIRMATION CODE</string>
    <string name="verify_title">Forgot your PIN?</string>
    <string name="verify_hint">Confirmation Code</string>
    <string name="verify_not_code">Сode did’t come?</string>
    <string name="verify_send_again">send again</string>
    <string name="verify_time_info">You can request new code in:</string>
    <string name="sign_up_title">Set up your new PIN</string>
    <string name="sign_up_pin">Your new PIN</string>
    <string name="sign_up_confirm">Confirm PIN</string>
    <string name="sign_up_simple">\nYour password is too simple\n</string>
    <string name="sign_up_simple_change">Change</string>
    <string name="sign_up_simple_next">Continue</string>
    <string name="lock_title">PIN-code</string>
    <string name="lock_user_hint">you\'ve been idle for 15 munutes.\nPlease, unlock Revo app to continue</string>
    <string name="lock_pin">Enter your PIN</string>
    <string name="lock_not_you">Not you?</string>
    <string name="lock_login">Log in here</string>
    <string name="main_menu_dashboard">Dashboard</string>
    <string name="main_menu_make_purchase">Make purchase</string>
    <string name="main_menu_return_purchase">Return purchase</string>
    <string name="main_menu_sign_out">Sign out</string>
    <string name="dashboard_title">Dashboard</string>
    <string name="dashboard_make_purchase">Make purchase</string>
    <string name="dashboard_return_purchase">Return purchase</string>
    <string name="dashboard_call_online">Call online</string>
    <string name="dashboard_chat">Chat support</string>
    <string name="dashboard_question">Questions?</string>
    <string name="dashboard_loans">Loans</string>
    <string name="dashboard_amount">Amount</string>
    <string name="dashboard_period">Sales report:  %s</string>
    <string name="dashboard_select_period">select period</string>
    <string name="dashboard_confirm_return">Exit to dashboard?</string>
    <string name="dashboard_chat_link"> </string>
    <string name="dashboard_support_call" translatable="false">22 245-05-45</string>
    <string name="dashboard_self_registration">ОТПРАВИТЬ ФОРМУ\nРЕГИСТРАЦИИ КЛИЕНТУ</string>
    <string name="declined_title">Declined</string>
    <string name="declined_caption">Purchase declined</string>
    <string name="declined_hint">Thank you for applying to Revo service.\nUnfortunately the decision about client is negative.</string>
    <string name="declined_to_dashboard">go to dashboard</string>
    <string name="declined_sincerely">Sincerely, Revo</string>
    <string name="help_title">Support</string>
    <string name="profile_title">Client Profile</string>
    <string name="profile_first_name">First name</string>
    <string name="profile_middle_name">Middle name</string>
    <string name="profile_last_name">Last name</string>
    <string name="profile_date_of_birth">Date of birth</string>
    <string name="profile_id">ID (Passport)</string>
    <string name="profile_next">NEXT, Step 2 of 5</string>
    <string name="profile_expiry_date">Expiry date</string>
    <string name="profile_pesel">PESEL</string>
    <string name="profile_bulletin"></string>
    <string name="profile_email">E-mail</string>
    <string name="profile_street">Street</string>
    <string name="profile_house">House</string>
    <string name="profile_flat">Flat</string>
    <string name="profile_postal_code">Postal Code</string>
    <string name="profile_city">City</string>
    <string name="profile_agree_asp"> </string>
    <string name="profile_agree_personal_date"> </string>
    <string name="profile_agree_asp_title"> </string>
    <string name="profile_agree_personal_date_title"> </string>
    <string name="profile_check_title">Check the following details with the buyer\'s ID. If the data is correct, press \"I confirm\", if not, return to the form and make the correction.</string>
    <string name="profile_check_client_name">Name and Surname:</string>
    <string name="profile_check_client_pesel">PESEL:</string>
    <string name="profile_check_client_number">ID (Passport):</string>
    <string name="agreement_title">Client Agreement</string>
    <string name="agreement_client_name">Clients\'s name</string>
    <string name="agreement_check_all">I mark all the following consents</string>
    <string name="agreement_regulations">I have read and accept the Revo Partner Regulations</string>
    <string name="agreement_regulations_title">Regulations of the Revo Partner mobile application</string>
    <string name="agreement_personal_data">I consent to the collection and processing of my personal data by taking a photo of a personal ID</string>
    <string name="agreement_personal_data_title">Processing personal data</string>
    <string name="agreement_credit_bureaus">I give authorizations and consents regarding verification at the Credit Information Bureau, business information offices and through the Loan Information Exchange Platform and for sharing my personal data in order to assess creditworthiness</string>
    <string name="agreement_credit_bureaus_title">Credit bureaus processing</string>
    <string name="agreement_marketing_email">I consent to the processing of my personal data in order to conduct direct marketing via e-mail (Optional)</string>
    <string name="agreement_administration"></string>
    <string name="agreement_marketing_email_title">Processing personal data for email marketing</string>
    <string name="agreement_marketing_phone">I agree to the processing of my personal data in order to conduct direct marketing via telephone connections (Optional)</string>
    <string name="agreement_marketing_phone_title">Processing personal data for telemarketing</string>
    <string name="agreement_confirm">Confirm</string>
    <string name="scan_camera_permission">Please enable Camera permission</string>
    <string name="scan_storage_permission">Please enable Storage permission</string>
    <string name="documents_title">Documents</string>
    <string name="documents_first">ID first page</string>
    <string name="documents_second">ID second page</string>
    <string name="documents_third"> </string>
    <string name="documents_new_photo">new photo</string>
    <string name="documents_pick_photo_title">Please pick the source</string>
    <string name="documents_next">NEXT, Step 4 of 5</string>
    <string name="documents_back">Go back to form</string>
    <string name="documents_client_name">Name and Surname</string>
    <string name="documents_client_pesel">PESEL</string>
    <string name="documents_title_warning"> </string>
    <string name="purchase_title">Request</string>
    <string name="purchase_sum">Total sum requested</string>
    <string name="purchase_client">Client</string>
    <string name="purchase_phone">Mobile phone</string>
    <string name="purchase_next">NEXT, Step 1 of 5</string>
    <string name="purchase_info">The administrator of your personal data is Revo Technologies Sp. z o.o. , ul. Grzybowska 2/29, 00–131 Warsaw, NIP 525–269–16–73. <u>Read more.</u></string>
    <string name="purchase_help_title">Information article</string>
    <string name="purchase_self_registration">SEND THE REGISTRATION FORM\nTO THE CUSTOMER ON THE PHONE?</string>
    <string name="calc_title">Calculator</string>
    <string name="calc_limit">Approved limit</string>
    <string name="calc_limit_rcl_not_accepted" />
    <string name="calc_sum">Sum of purchase</string>
    <string name="calc_period">Select period</string>
    <string name="calc_input_sum">Please enter the purchase order and confirm</string>
    <string name="calc_next">Next, Step 3 of 5</string>
    <string name="calc_loan_period">%d month</string>
    <string name="calc_loan_pay">%s zł / m</string>
    <string name="calc_loan_total_of_payment">Total of payments</string>
    <string name="calc_loan_sum">Sum with discount</string>
    <string name="calc_loan_overpayment">Total overpayment</string>
    <string name="calc_loan_payment_schedule">Payment schedule</string>
    <string name="calc_enable_sms_inform">Aktywuj Dodatkowe Powiadomienia %s / mies.</string>
    <string name="calc_enable_sms_inform_info">Po zaakceptowaniu tej zgody, będziemy wysyłać Ci dodatkowe powiadomienia SMS, aby przypomnieć Ci o dokonywaniu terminowych płatności. Aktywacja usługi Dodatkowe Powiadomienia odbywa się na &lt;a href="http://kokao-backend.mokka.pl/legal_documents/downloads/informing">warunkach z Umowy o Odnawialny Limit Kredytowy&lt;/a></string>
    <string name="calc_accident_insurance"> </string>
    <string name="confirm_title">Standard European Consumer</string>
    <string name="confirm_next">Confirm</string>
    <string name="agreement_SMS"></string>
    <string name="demo_mode">Demo mode</string>
</resources>