<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:paddingTop="24dp"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:paddingBottom="24dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:text="@string/select_locale"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/selectButtonRu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:textColor="@color/black_de"
            android:textSize="16sp"
            android:text="@string/select_locate_ru"
            app:buttonTint="@color/radio_button_tint"/>

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/selectButtonPl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:textColor="@color/black_de"
            android:textSize="16sp"
            android:text="@string/select_locate_pl"
            android:checked="true"
            app:buttonTint="@color/radio_button_tint"/>

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/selectButtonRo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:textColor="@color/black_de"
            android:textSize="16sp"
            android:text="@string/select_locate_ro"
            app:buttonTint="@color/radio_button_tint"/>

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/selectButtonBg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:textColor="@color/black_de"
            android:textSize="16sp"
            android:text="@string/select_locate_bg"
            app:buttonTint="@color/radio_button_tint"/>

    </RadioGroup>

</LinearLayout>