<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/purchaseFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/purchaseClient"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:text="@string/purchase_client"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/purchasePhoneLayout"
        style="@style/TextInputLayoutStyle.Constraint"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/purchaseClient"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/purchasePhone"
            style="@style/TextEditStyle"
            android:inputType="phone"
            android:imeOptions="actionDone"
            android:hint="@string/purchase_phone"/>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/purchaseInfo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/purchasePhoneLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/purchaseDemo">

        <View
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:background="@drawable/gradient_divider"/>

        <TextView
            android:id="@+id/puchaseInfoView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:text="@string/purchase_info"/>

    </LinearLayout>

    <TextView
        android:id="@+id/purchaseDemo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="19dp"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/demo_mode"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/purchaseSelfRegistration"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/purchaseSelfRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:gravity="center_horizontal"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        android:text="@string/purchase_self_registration"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/purchaseNextBtn"/>

    <pl.revo.merchant.widget.StepButtonWidget
        android:id="@+id/purchaseNextBtn"
        android:layout_width="0dp"
        android:layout_height="52dp"
        app:step="1"
        app:steps="5"
        android:alpha="0.5"
        android:text="@string/purchase_next"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>