<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/forgotHint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_horizontal"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:text="@string/forgot_info"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/forgotLoginLayout"
        style="@style/TextInputLayoutStyle.Constraint"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/forgotHint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/forgotLogin"
            style="@style/TextEditStyle"
            android:inputType="text"
            android:imeOptions="actionDone"
            android:hint="@string/sign_in_login"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forgotSendCodeBtn"
        style="@style/BottomButtonStyle"
        android:alpha="0.5"
        android:text="@string/forgot_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>